SUBDIRS = 

confdir = $(sysconfdir)/warewulf/
initdir = $(sysconfdir)/warewulf/vnfs/include/etc/rc.d/init.d/
sconfdir = $(sysconfdir)/warewulf/vnfs/include/etc/sysconfig
profiledir = $(sysconfdir)/profile.d/

dist_conf_DATA = 
dist_init_SCRIPTS = wwfirstboot
dist_sconf_DATA = wwfirstboot.conf
dist_profile_DATA = cluster-env.sh cluster-env.csh

MAINTAINERCLEANFILES = Makefile.in

